<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     This file is part of WallhavenforMuzei3.
  ~
  ~     WallhavenforMuzei3 is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program  is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:key="@string/preferenceScreen">

    <PreferenceCategory
        android:key="prefCat_appInfo"
        android:title="@string/prefCat_appInfo">
        <Preference
            android:key="pref_version"
            android:title="@string/prefTitle_version"
            android:selectable="false" />
        <Preference
            android:key="pref_author"
            android:title="@string/prefTitle_author"
            android:summary="@string/app_author_name"
            android:selectable="false" />
        <Preference
            android:key="pref_source_code"
            android:title="@string/prefTitle_sourceCode"
            android:summary="@string/prefSummary_sourceCode" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="prefCat_update"
        android:title="@string/prefCat_update">
        <Preference
            android:key="pref_check_update"
            android:title="@string/prefTitle_checkUpdate"
            android:summary="@string/prefSummary_checkUpdate" />
    </PreferenceCategory>
</PreferenceScreen>
