<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="prefCat_feedSettings"
        android:title="@string/prefCat_pullFeedSettings">
        <DropDownPreference
            android:defaultValue="@string/pref_updateMode_default"
            android:enabled="true"
            android:entries="@array/pref_updateMode_entries"
            android:entryValues="@array/pref_updateMode_entryValues"
            android:key="pref_updateMode"
            android:persistent="true"
            android:title="@string/pref_updateMode"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:dialogTitle="@string/prefDialog_tagFilter"
            android:inputType="text"
            android:key="pref_tagFilter"
            android:persistent="true"
            android:title="@string/prefTitle_tagFilter"
            app:isPreferenceVisible="true"
            app:useSimpleSummaryProvider="true" />
        <MultiSelectListPreference
            android:defaultValue="@array/pref_rankingFilterDefault_entryvalues"
            android:entries="@array/pref_rankingFilterLevel_entries"
            android:entryValues="@array/pref_rankingFilterLevel_entryvalues"
            android:key="pref_rankingFilterSelect"
            android:persistent="true"
            android:title="@string/prefTitle_rankingFilterSelect"
            app:isPreferenceVisible="false" />
        <MultiSelectListPreference
            android:defaultValue="@array/pref_rankingCategoryDefault_entryvalues"
            android:entries="@array/pref_rankingCategory_entries"
            android:entryValues="@array/pref_rankingCategory_entryvalues"
            android:key="pref_rankingCategorySelect"
            android:persistent="true"
            android:title="@string/prefTitle_rankingCategorySelect"
            app:isPreferenceVisible="false" />
        <MultiSelectListPreference
            android:defaultValue="@array/pref_authFilterDefault_entryvalues"
            android:entries="@array/pref_authFilterLevel_entries"
            android:entryValues="@array/pref_authFilterLevel_entryvalues"
            android:key="pref_authFilterSelect"
            android:persistent="true"
            android:title="@string/prefTitle_authFilterSelect"
            app:isPreferenceVisible="false" />
        <Preference
            android:key="@string/button_clearCache"
            android:summary="@string/prefSummary_stuckApp"
            android:title="@string/button_clearCache" />
        <Preference
            android:key="pref_forceRefresh"
            android:summary="@string/prefSummary_forceRefresh"
            android:title="@string/button_forceRefresh" />
        <EditTextPreference
            android:dialogTitle="@string/prefTitle_tagSearch"
            android:inputType="text"
            android:key="pref_tagSearch"
            android:persistent="true"
            android:title="@string/prefTitle_tagSearch"
            app:isPreferenceVisible="false"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:key="pref_tagLanguage"
            android:persistent="true"
            android:title="@string/prefTitle_tagLanguage"
            app:entries="@array/pref_tagFilterLanguage_entries"
            app:entryValues="@array/pref_tagFilterLanguage_entryValues"
            app:isPreferenceVisible="false"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:dialogTitle="@string/prefTitle_artistId"
            android:inputType="number"
            android:key="pref_artistId"
            android:persistent="true"
            android:title="@string/prefTitle_artistId"
            app:isPreferenceVisible="false"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="prefCat_loginSettings"
        android:title="@string/prefCat_authSettings">
        <EditTextPreference
            android:dialogTitle="@string/prefDialog_apiKey"
            android:inputType="textPassword"
            android:key="pref_api_key"
            android:persistent="true"
            android:title="@string/prefTitle_apiKey" />
        <DropDownPreference
            android:entries="@array/array_authFailActions_entries"
            android:entryValues="@array/array_authFailActions_entryvalues"
            android:key="pref_authFailAction"
            android:persistent="true"
            android:title="@string/pref_authFailActionDropDown"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
